# ai-agents

./: .env.example  function_call.py  load_env.py  pydantic.ipynb  pyproject.toml  requirements.txt
data/: sample.txt
src/rag_app/: __init__.py  api.py  ingest.py  vectorstore.py
tests/: test_chromadb.py  test_demo.py  test_ingest.py  test_pydantic.py
