[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb-client>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "onnxruntime>=1.26.0",
    "openai>=2.40.0",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
